k8s/deployment-http.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvstore-http
  namespace: kvstore
  labels:
    app: kvstore-http
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kvstore-http
  template:
    metadata:
      labels:
        app: kvstore-http
    spec:
      containers:
      - name: kvstore-http
        image: ghcr.io/dilaz/kvstore:latest
        imagePullPolicy: Always
        args: ["--mode=http"]
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          runAsUser: 10000
          capabilities:
            drop: [ALL]
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 20
        resources:
          requests:
            memory: 64Mi
            cpu: 5m
          limits:
            memory: 100Mi
            cpu: 15m
