k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvstore
  namespace: kvstore
  labels:
    app: kvstore
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kvstore
  template:
    metadata:
      labels:
        app: kvstore
    spec:
      containers:
      - name: kvstore
        image: ghcr.io/dilaz/kvstore:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          runAsUser: 10000
          capabilities:
            drop: [ALL]
        ports:
          - containerPort: 3000
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 20
        resources:
          requests:
            memory: 64Mi
            cpu: 5m
          limits:
            memory: 100Mi
            cpu: 15m
