k8s/service-http.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvstore-http
  namespace: kvstore
  labels:
    app: kvstore-http
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: kvstore-http
  type: ClusterIP
