k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvstore
  namespace: kvstore
  labels:
    app: kvstore
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: kvstore
  type: NodePort
