k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvstore-http
  namespace: kvstore
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: kvstore.binarydream.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kvstore-http
                port:
                  number: 3000
  tls:
    - secretName: kvstore-tls
      hosts:
        - kvstore.binarydream.fi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvstore-grpc
  namespace: kvstore
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: grpc
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: kvstore.binarydream.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kvstore-grpc
                port:
                  number: 50051
  tls:
    - secretName: kvstore-tls
      hosts:
        - kvstore.binarydream.fi
